[package]
name = 'controller'
version = '6.6.5-beta1'
license = 'Apache-2.0'
edition = '2021'
authors = ['Rivtower Technologies <contact@rivtower.com>']

[dependencies]
tonic = '0.9'
prost = '0.11'
rand = '0.8'
toml = '0.7'
serde = '1.0'
serde_derive = '1.0'
hex = '0.4'
backtrace = '0.3'
tower = '0.4'
tracing = '0.1'
cloud-util = '=0.6.2-beta1'
cita_cloud_proto = '=6.6.5-beta1'

[dependencies.clap]
version = '4.2'
features = ['derive']

[dependencies.tokio]
version = '1.27'
features = ['full']

[build-dependencies]
tonic-build = '0.9'
[profile.release]
debug = 1
[profile.release.package."*"]
debug = 0
