[package]
name = 'controller'
version = '6.7.0-beta1'
license = 'Apache-2.0'
edition = '2021'
authors = ['Rivtower Technologies <contact@rivtower.com>']

[dependencies]
tonic = '0.9'
prost = '0.11'
rand = '0.8'
toml = '0.7'
serde = '1.0'
serde_derive = '1.0'
hex = '0.4'
tower = '0.4'
tracing = '0.1'
cloud-util = '=0.7.0-beta1'
cita_cloud_proto = '=6.7.0-beta1'

[dependencies.clap]
version = '4.2'
features = ['derive']

[dependencies.tokio]
version = '1.27'
features = ['full']

[dependencies.crypto_sm]
git = 'https://github.com/cita-cloud/crypto_sm'
package = 'crypto'
optional = true
branch = 'v6.7.0-beta1'

[dependencies.crypto_eth]
git = 'https://github.com/cita-cloud/crypto_eth'
package = 'crypto'
optional = true
branch = 'v6.7.0-beta1'

[build-dependencies]
tonic-build = '0.9'
[profile.release]
debug = 1
[profile.release.package."*"]
debug = 0

[features]
default = ['sm']
sm = ['crypto_sm']
eth = ['crypto_eth']
